# ai_poc

./: .gitignore
travclan_mcp/: README.md  mcp.example.json  pyproject.toml
travclan_mcp/src/hotel_mcp/: CODE_FLOW.md  __main__.py  config.py  container.py  server.py
travclan_mcp/src/hotel_mcp/application/: ports.py
travclan_mcp/src/hotel_mcp/application/use_cases/: create_booking.py  get_booking_details.py  get_hotel_static_content.py  get_rooms_and_rates.py  price_check.py  search_hotels.py  search_locations.py
travclan_mcp/src/hotel_mcp/domain/: entities.py  exceptions.py
travclan_mcp/src/hotel_mcp/infrastructure/: auth.py  travclan_hotel_api.py
travclan_mcp/src/hotel_mcp/interface/: tools.py
travclan_mcp/src/hotel_mcp/skills/claude/: hotel-booking-skill.md
travelmind-scripts/: .env-example  constants.py  fetch_hotel_static_content.py  prepare_hotel_vectors.py  push_hotel_vectors_to_pinecone.py  requirement.txt  sample_pinecone_records.json  script_utils.py
travelmind-scripts/utils/: __init__.py  hotel_static_normalizer.py  reviews_normalizer.py
wiki-scripts/: .env-example  fetch_wiki_data.py  prepare_pinecone_data.py  readme.md  requirement.txt  wiki_sync.sh
