[project]
name = "travclan_mcp"
version = "0.1.0"
description = "TravClan MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27,<2",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
hotel-mcp = "hotel_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hotel_mcp"]